canadensis_dsdl_frontend/tests/compile_fail/single_field_union/canadensis/SingleFieldUnion.1.0.uavcan
@union
# One field (two are required)
uint32 a

@sealed
